<resources>
    <string name="app_name">MobielBeleven</string>
    <string name="go_button">Ga</string>
    <string name="QR_button">Scannen</string>
    <string name="attractions_button">Attracties</string>
    <string name="map_button">Plattegrond</string>
    <string name="gallery_button">Foto\'s</string>
    <string name="photo_titlebar_text">Foto</string>
    <string name="raad_de_schaduw_titel">Raad de schaduw</string>
    <string name="snake_menu_text">Snake Menu</string>
    <string name="send_button">Stuur</string>
    <string name="new_game">Nieuw Spel</string>
    <string name="snake_menu_button_improve">Verbeter</string>
    <string name="puzzle_text">Puzzel</string>
    <string name="title_activity_toolbar">Toolbar</string>
    <string name="help_title">Help</string>
    <string name="help_info">Niet meer vervelen in de wachtrij, daarvoor gebruik je deze app. Als je in de wachtrij aansluit komt er een spelletje of een raadsel vrij. Je kunt ernaartoe door op de Ga knop te klikken. Je kan het raadsel of het spelletje ook doen door naar de QR functie te gaan. Scan met de camera de QR code die aan het begin van iedere wachtrij hangt. Veel Plezier!</string>
    <string name="puzzle_check">Check</string>
    <string name="guess_shadow_question">Wie is dit figuur?</string>
    <string name="QR_Text">Mocht de knop niet automatisch veranderen in de wachtrij. Scan dan de zwart/witte code aan het begin van de wachtrij van de attractie.</string>
    <string name="snake_menu_score_sent">Score verzenden</string>
    <string name="snackbar_go">Er is geen spel beschikbaar.</string>
    <string name="searchBar">zoeken...</string>
    <string name="attractions_overview_searchview_queryhint">Zoek hier</string>


</resources>
