<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/home_background_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backgroundessteling" />

    <Button
        android:id="@+id/home_bttn_go_id"
        android:layout_width="102dp"
        android:layout_height="99dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circle_button_home"
        android:text="@string/go_button"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/home_bttn_3_id"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape"
        android:fontFamily="casual"
        android:text="@string/map_button"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/home_bttn_4_id"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/home_bttn_2_id"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape"
        android:fontFamily="casual"
        android:text="@string/attractions_button"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/home_bttn_3_id"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/home_bttn_1_id"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape"
        android:fontFamily="casual"
        android:text="@string/QR_button"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/home_bttn_2_id"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/home_bttn_4_id"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/shape"
        android:fontFamily="casual"
        android:text="@string/gallery_button"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</android.support.constraint.ConstraintLayout>